fix: format Cargo.toml for better readability

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/zirc-lexer",
     "crates/zirc-parser",
     "crates/zirc-interpreter",
-    "crates/zirc-cli", "crates/zirc-fmt",
+    "crates/zirc-cli", 
+    "crates/zirc-fmt",
 ]
 resolver = "2"
