--- a/crates/zirc-syntax/Cargo.toml
+++ b/crates/zirc-syntax/Cargo.toml
@@ -1,6 +1,14 @@
 [package]
 name = "zirc-syntax"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+rust-version.workspace = true
+description = "Syntax definitions and AST for the Zirc programming language"
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
