feat(interpreter): new methods and logics

--- a/crates/zirc-interpreter/Cargo.toml
+++ b/crates/zirc-interpreter/Cargo.toml
@@ -13,3 +13,7 @@ categories.workspace = true
 
 [dependencies]
 zirc-syntax.workspace = true
+
+[dev-dependencies]
+zirc-lexer.workspace = true
+zirc-parser.workspace = true
