chore(cli): apply some changes

--- a/crates/zirc-cli/Cargo.toml
+++ b/crates/zirc-cli/Cargo.toml
@@ -10,6 +10,11 @@ rust-version.workspace = true
 description = "Command-line interface and REPL for the Zirc programming language"
 keywords.workspace = true
 categories.workspace = true
+autobins = false
+
+[[bin]]
+name = "zirc"
+path = "src/main.rs"
 
 [[bin]]
 name = "zirc-repl"
